# feup-aed-project-2

./: .gitignore  Airline.cpp  Airline.h  Airport.cpp  Airport.h  App.cpp  App.h  CMakeLists.txt  City.cpp  City.h  Coordinate.cpp  Coordinate.h  Country.cpp  Country.h  Data.cpp  Data.h  Doxyfile  Graph.cpp  Graph.h  README.md  main.cpp
States/: BestFlightMenuState.cpp  BestFlightMenuState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h  SubMenuState.cpp  SubMenuState.h  TryAgainState.cpp  TryAgainState.h
States/GetFlight/: GetFlightDestinationMenuState.cpp  GetFlightDestinationMenuState.h  GetFlightFilterMenuState.cpp  GetFlightFilterMenuState.h  GetFlightOriginMenuState.cpp  GetFlightOriginMenuState.h
States/OtherMethods/: OtherMethodsMenuState.cpp  OtherMethodsMenuState.h
States/Statistics/: StatisticsMenuState.cpp  StatisticsMenuState.h
States/Utils/: GetAirlineSetState.cpp  GetAirlineSetState.h  GetAirlineState.cpp  GetAirlineState.h  GetAirportState.cpp  GetAirportState.h  GetCityState.cpp  GetCityState.h  GetCoordinatesState.cpp  GetCoordinatesState.h  GetCountryState.cpp  GetCountryState.h  GetRadiusState.cpp  GetRadiusState.h  GetStopsState.cpp  GetStopsState.h  GetTopState.cpp  GetTopState.h  LocationInfo.cpp  LocationInfo.h  MinimizeAirlinesState.cpp  MinimizeAirlinesState.h  TryAgainState.cpp  TryAgainState.h
docs/html/: _airline_8h_source.html  _airline_statistics_menu_state_8h_source.html  _airport_8h_source.html  _airport_statistics_menu_state_8h_source.html  _app_8h_source.html  _city_8h_source.html  _city_statistics_menu_state_8h_source.html  _coordinate_8h_source.html  _country_8h_source.html  _country_statistics_menu_state_8h_source.html  _data_8h_source.html  _get_airline_set_state_8h_source.html  _get_airline_state_8h_source.html  _get_airport_state_8h_source.html  _get_city_state_8h_source.html  _get_coordinates_state_8h_source.html  _get_country_state_8h_source.html  _get_flight_destination_menu_state_8h_source.html  _get_flight_filter_menu_state_8h_source.html  _get_flight_origin_menu_state_8h_source.html  _get_radius_state_8h_source.html  _get_stops_state_8h_source.html  _get_top_state_8h_source.html  _global_statistics_menu_state_8h_source.html  _graph_8h_source.html  _location_info_8h_source.html  _main_menu_state_8h_source.html  _minimize_airlines_state_8h_source.html  _other_methods_menu_state_8h_source.html  _state_8h_source.html  _statistics_menu_state_8h_source.html  _try_again_state_8h_source.html  annotated.html  class_airline-members.html  class_airline.html  class_airline_statistics_menu_state-members.html  class_airline_statistics_menu_state.html  class_airline_statistics_menu_state__coll__graph.map  class_airline_statistics_menu_state__coll__graph.md5  class_airline_statistics_menu_state__inherit__graph.dot  (+272 more)
docs/latex/: _airline_8h_source.tex  _airline_statistics_menu_state_8h_source.tex  _airport_8h_source.tex  _airport_statistics_menu_state_8h_source.tex  _app_8h_source.tex  _city_8h_source.tex  _city_statistics_menu_state_8h_source.tex  _coordinate_8h_source.tex  _country_8h_source.tex  _country_statistics_menu_state_8h_source.tex  _data_8h_source.tex  _get_airline_set_state_8h_source.tex  _get_airline_state_8h_source.tex  _get_airport_state_8h_source.tex  _get_city_state_8h_source.tex  _get_coordinates_state_8h_source.tex  _get_country_state_8h_source.tex  _get_flight_destination_menu_state_8h_source.tex  _get_radius_state_8h_source.tex  (+134 more)
(+68 files in other folders)
